[package]
name = "waypaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.9.0"
wayland-client = "0.30.1"
wayland-protocols = { version = "0.30.0", features = ["client"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
tempfile = "3.2.0"
image = "0.24.6"
rust-ini = "0.19.0"
dirs = "5.0.1"
notify = "6.0.1"
epoll = "4.3.3"
libc = "0.2.147"
futures = "0.3.28"
futures-util = "0.3.28"
futures-channel = "0.3.28"
signal-hook = "0.3.17"

[[bin]]
name = "waypaper"
path = "src/main.rs"

[[bin]]
name = "waypaper-daemon"
path = "src/bin/daemon.rs"
